crates/xlate/tests/snapshots/golden_matrix__multiturn_sysdev__chat_to_responses__gpt6.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-6-astra",
  "instructions": "Global system prompt.",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "First question."
        }
      ]
    },
    {
      "type": "message",
      "role": "assistant",
      "content": [
        {
          "type": "output_text",
          "text": "First answer.",
          "annotations": []
        }
      ]
    },
    {
      "type": "message",
      "role": "developer",
      "content": [
        {
          "type": "input_text",
          "text": "Mid-context developer instruction."
        }
      ]
    },
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Second question."
        }
      ]
    }
  ],
  "max_output_tokens": 1024
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
